# Utils

./: .gitignore  .gitmodules  ReadMe.md  ReadMe.txt  ccutil.cpp  ccutil.h  config.h  cutil.c  cutil.h  utils_config.h.example
test/: CMakeLists.txt  Makefile  build.sh  char.cc  charset.c  charset.cc  charset.h  cppstring.cpp  cppstring.h  datatype.c  datatype.cc  datatype.h  directory.cc  file.cc  filepath.cc  filesystem.c  filesystem.cc  filesystem.h  logging.cc  main.cc  math.c  math.cc  math.h  others.cc  others.h  sqlite.cc  sqlite.h  string.c  string.cc  string.h  test-c.c  test-c.h  test-cpp.cpp  test-cpp.h  thread.cc  toolchain.cmake  unittest.cc  version.cc  zlibtest.c  zlibtest.h
test/data/Four Famous Novels/: The Dream of the Red Chamber (UTF-8) - 副本.txt  The Romance of the Three Kindoms (UTF-8 BOM).txt  The Story by the Water Margin (UTF-16LE).txt
test/gcc/: Makefile  build_run_c.sh  build_run_cpp.sh  shell.txt  test.c  test.cpp  testc  testcpp
test/msvc/: ReadMe.txt  StdAfx.cpp  StdAfx.h  TestC-Results.xml  TestCpp-Results.xml  TestVC10.sln  TestVC6.cpp  TestVC6.dsp  TestVC6.dsw
test/msvc/TestVC10/: ReadMe.txt  TestVC10.cpp  TestVC10.vcxproj  TestVC10.vcxproj.filters  stdafx.cpp
test/msvc/vs2013/: ReadMe.txt  stdafx.cpp  unittest.cpp  unittest.sln  unittest.vcxproj  unittest.vcxproj.filters  vs2013.sln  vs2013.vcxproj  vs2013.vcxproj.filters
test/xcode/: .gitignore
test/xcode/unittest.xcodeproj/: project.pbxproj
test/xcode/unittest.xcodeproj/project.xcworkspace/xcshareddata/: unittest.xccheckout
